[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/menu/DUELIST  DUNGEON.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://levels/Menu.gd" type="Script" id=3]
[ext_resource path="res://sounds/actions/CURSOL_OK.wav.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/actions/CURSOL_SELECT.wav.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/musics/King's Field IV - Dark Reality (Recreation).wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.25098 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0.25098 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="Menu" type="Node"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )

[node name="Title" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -375.0
margin_right = 640.0
margin_bottom = 375.0
texture = ExtResource( 1 )
expand = true

[node name="Select" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = 99.0
margin_right = 83.0
margin_bottom = 195.0
custom_constants/separation = 32

[node name="NewGame" type="Button" parent="Control/Select"]
margin_right = 166.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "New Game"

[node name="QuitGame" type="Button" parent="Control/Select"]
margin_top = 64.0
margin_right = 166.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
text = "Quit Game"

[node name="Version" type="Label" parent="Control"]
margin_left = 31.0
margin_top = 32.0
margin_right = 138.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
text = "Demo Version"

[node name="Audio" type="Node" parent="."]

[node name="Select" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )

[node name="Confirm" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="Control/Select/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Control/Select/QuitGame" to="." method="_on_QuitGame_pressed"]
